quick fix to shift interactive body over 10px

--- a/static/src/stylesheets/module/content/_interactive.scss
+++ b/static/src/stylesheets/module/content/_interactive.scss
@@ -16,8 +16,8 @@
         @include mq(desktop) {
             max-width: none;
             margin: 0;
+            margin-left: -($gs-gutter / 2);
         }
-
     }
 
     .meta__extras {
